--- a/resume.html
+++ b/resume.html
@@ -3,4 +3,4 @@ layout: page
 title: Resume
 ---
 
-<center><p>For a copy of my resume, please feel free to reach out to me at <a href="mailto:contact@0x00Check.com">contact@0x00Check.com</a>.</p></center>
+<center><p>For a copy of my resume, please reach out to me at <a href="mailto:contact@0x00Check.com">contact@0x00Check.com</a>.</p></center>
